aws: Add s3:ListBucketMultipartUploads permissions to IAM policies

--- a/examples/aws/cloudformation/ent.yaml
+++ b/examples/aws/cloudformation/ent.yaml
@@ -730,6 +730,7 @@ Resources:
             Action:
             - "s3:ListBucket"
             - "s3:ListBucketVersions"
+            - "s3:ListBucketMultipartUploads"
 
           -
             Effect: "Allow"
@@ -816,6 +817,7 @@ Resources:
             Action:
             - "s3:ListBucket"
             - "s3:ListBucketVersions"
+            - "s3:ListBucketMultipartUploads"
 
           -
             Effect: "Allow"
