Convert update-api-version logic to use basic ioutil rather than the go/packages package; Add proto files and make grpc to update_api_module_path.

--- a/build.assets/Dockerfile
+++ b/build.assets/Dockerfile
@@ -119,7 +119,7 @@ RUN (git clone https://github.com/gogo/protobuf.git ${GOPATH}/src/github.com/gog
      git reset --hard ${GOGO_PROTO_TAG} && \
      make install)
 
-ENV PROTO_INCLUDE "/usr/local/include":"${GOPATH}/src":"${GOPATH}/src/github.com/gogo/protobuf/protobuf":"${GOGOPROTO_ROOT}":"${GOGOPROTO_ROOT}/protobuf":"${GOPATH}/src/github.com/gravitational/teleport/vendor"
+ENV PROTO_INCLUDE "/usr/local/include":"${GOPATH}/src/github.com/gravitational/teleport/vendor":"${GOPATH}/src/github.com/gogo/protobuf/protobuf":"${GOGOPROTO_ROOT}":"${GOGOPROTO_ROOT}/protobuf"
 
 # Install PAM module and policies for testing.
 COPY pam/ /opt/pam_teleport/
