Mount teleport-tls to the init container for the teleport-cluster helm chart (#7166)
Co-authored-by: Gus Luxton <gus@goteleport.com>

--- a/examples/chart/teleport-cluster/templates/deployment.yaml
+++ b/examples/chart/teleport-cluster/templates/deployment.yaml
@@ -88,6 +88,11 @@ spec:
           name: "gcp-credentials"
           readOnly: true
   {{- end }}
+  {{- if .Values.highAvailability.certManager.enabled }}
+        - mountPath: /etc/teleport-tls
+          name: "teleport-tls"
+          readOnly: true
+  {{- end }}
         - mountPath: /etc/teleport
           name: "config"
           readOnly: true
