--- a/build.assets/Dockerfile-fips
+++ b/build.assets/Dockerfile-fips
@@ -40,6 +40,7 @@ RUN apt-get update -y --fix-missing && \
         tree \
         unzip \
         zip \
+        zlib1g-dev \
         && \
     dpkg-reconfigure locales && \
     apt-get -y clean && \
@@ -64,7 +65,7 @@ RUN mkdir -p /opt && cd /opt && curl https://go-boringcrypto.storage.googleapis.
 
 # Install libbpf
 ARG LIBBPF_VERSION
-RUN mkdir -p /opt && cd /opt && curl -L https://github.com/libbpf/libbpf/archive/refs/tags/v${LIBBPF_VERSION}.tar.gz | tar xz && \
+RUN mkdir -p /opt && cd /opt && curl -L https://github.com/gravitational/libbpf/archive/refs/tags/v${LIBBPF_VERSION}.tar.gz | tar xz && \
     cd /opt/libbpf-${LIBBPF_VERSION}/src && \
     make && \
     make install
