--- a/.drone.yml
+++ b/.drone.yml
@@ -1206,6 +1206,7 @@ steps:
     commands:
       - export TELEPORT_TAG=$(cat /go/build/CURRENT_VERSION_TAG.txt)
       - export TELEPORT_LAB_IMAGE_NAME="quay.io/gravitational/teleport-lab:$(cat /go/build/CURRENT_VERSION_TAG_GENERIC.txt)"
+      - apk add --no-cache curl
       - docker login -u="$PLUGIN_USERNAME" -p="$PLUGIN_PASSWORD" quay.io
        # Get Dockerfile
       - curl -Ls -o /go/build/Dockerfile-teleport-lab https://raw.githubusercontent.com/gravitational/teleport/${DRONE_SOURCE_BRANCH:-master}/docker/sshd/Dockerfile
