--- a/lib/srv/desktop/rdp/rdpclient/Cargo.toml
+++ b/lib/srv/desktop/rdp/rdpclient/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2018"
 crate-type = ["staticlib"]
 
 [dependencies]
+env_logger = "0.9.0"
 libc = "0.2.98"
+log = "0.4.14"
 rdp-rs = "0.1.0"
