Sign tsh.exe on tag builds
This adds a Makefile step to sign tsh.exe when the
`$WINDOWS_SIGNING_CERTIFICATE` env var is set to a base64-encoded
pkcs12 code signing certificate. The certificate must not be password
protected.

This includes a sample cert (`cert-dummy.pfx`) for CI pipeline
testing. It should be removed in any eventual PR, along with the
other modifications to the drone pipeline. The cert is imported into
the environment in the `Makefile` for testing purposes; in practice
it will be imported from a secure secret store (drone secrets, etc).

--- a/build.assets/Makefile
+++ b/build.assets/Makefile
@@ -45,6 +45,14 @@ ifneq ("$(KUBECONFIG)","")
 DOCKERFLAGS := $(DOCKERFLAGS) -v $(KUBECONFIG):/mnt/kube/config -e KUBECONFIG=/mnt/kube/config -e TEST_KUBE=$(TEST_KUBE)
 endif
 
+ifneq ("$(WINDOWS_SIGNING_CERTIFICATE)","")
+DOCKERFLAGS := $(DOCKERFLAGS) -e WINDOWS_SIGNING_CERTIFICATE=$(WINDOWS_SIGNING_CERTIFICATE)
+endif
+
+ifneq ("$(WINDOWS_SIGNING_PASSWORD)","")
+DOCKERFLAGS := $(DOCKERFLAGS) -e WINDOWS_SIGNING_PASSWORD=$(WINDOWS_SIGNING_PASSWORD)
+endif
+
 # conditionally force the use of UID/GID 1000:1000 if we're running in Drone
 ifeq ("$(DRONE)","true")
 UID := 1000
