--- a/build.assets/Dockerfile
+++ b/build.assets/Dockerfile
@@ -46,6 +46,7 @@ RUN apt-get update -y --fix-missing && \
         mingw-w64 \
         net-tools \
         openssh-client \
+        osslsigncode \
         python-pip \
         pkg-config \
         shellcheck \
